changed categories in budget so it would be an ArrayList instead of an Array.listof